[gd_scene load_steps=17 format=3 uid="uid://bi4vcv41hoy0q"]

[ext_resource type="Script" path="res://heroes/base/HeroBase.gd" id="1_sq7xi"]
[ext_resource type="Material" uid="uid://tdbycpp30oep" path="res://graphics/materials/gold.tres" id="2_5pqg1"]
[ext_resource type="PackedScene" uid="uid://trp7xhom42y" path="res://objs/pointer/mouse_mostrar.tscn" id="2_bxvmy"]
[ext_resource type="PackedScene" uid="uid://d20x3gfrmoext" path="res://comps/scenes/health_component.tscn" id="2_w8m13"]
[ext_resource type="PackedScene" uid="uid://dvaipocthe14r" path="res://comps/scenes/damage_mgr_component.tscn" id="3_mautj"]
[ext_resource type="PackedScene" uid="uid://cwhihpdu5pw3h" path="res://comps/scenes/gui_component.tscn" id="5_vnvt4"]
[ext_resource type="PackedScene" uid="uid://bfx1wxpmwujue" path="res://comps/scenes/sanity_component.tscn" id="6_0472j"]
[ext_resource type="PackedScene" uid="uid://bid6uhyybfx4x" path="res://comps/scenes/navigation_component.tscn" id="7_r5h44"]
[ext_resource type="PackedScene" uid="uid://cx88lgs15cpdr" path="res://comps/scenes/effects_component.tscn" id="8_xgmrb"]
[ext_resource type="PackedScene" uid="uid://boihyru5nyiju" path="res://comps/scenes/xp_component.tscn" id="9_3sdxv"]
[ext_resource type="PackedScene" uid="uid://ek5hq7khlfdc" path="res://comps/scenes/battack_component.tscn" id="9_lc4gq"]
[ext_resource type="PackedScene" uid="uid://bb82m0a0q1pso" path="res://objs/pointer/direction_pointer.tscn" id="10_akldm"]
[ext_resource type="PackedScene" uid="uid://5fpdn8fr4h7o" path="res://comps/scenes/controller_component.tscn" id="10_njmc3"]
[ext_resource type="PackedScene" uid="uid://7jpo0gk6b183" path="res://comps/scenes/show_effect.tscn" id="12_n05nj"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vra3a"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vhjqo"]
material = ExtResource("2_5pqg1")

[node name="SacoDePancada" type="CharacterBody3D" node_paths=PackedStringArray("dmgr", "xp_comp", "batk_comp", "fx_comp", "q_p", "w_p", "e_p", "r_p") groups=["hitbox_owner"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_sq7xi")
dmgr = NodePath("DamageMgrComponent")
xp_comp = NodePath("XPComponent")
batk_comp = NodePath("BAttackComponent")
fx_comp = NodePath("EffectsComponent")
q_p = NodePath("AbilityPointers/Q")
w_p = NodePath("AbilityPointers/W")
e_p = NodePath("AbilityPointers/E")
r_p = NodePath("AbilityPointers/R")

[node name="MouseMostrar" parent="." instance=ExtResource("2_bxvmy")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_vra3a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_vhjqo")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hero") instance=ExtResource("2_w8m13")]
physical_resistance = 0.01
magical_resistance = 0.01
hero = NodePath("..")

[node name="DamageMgrComponent" parent="." node_paths=PackedStringArray("health_component", "effects_component") instance=ExtResource("3_mautj")]
health_component = NodePath("../HealthComponent")
effects_component = NodePath("../EffectsComponent")

[node name="GUIComponent" parent="." node_paths=PackedStringArray("health_comp", "sanity_comp") instance=ExtResource("5_vnvt4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.33255, 0)
health_comp = NodePath("../HealthComponent")
has_sanity = true
sanity_comp = NodePath("../SanityComponent")

[node name="SanityComponent" parent="." node_paths=PackedStringArray("health_comp") instance=ExtResource("6_0472j")]
health_comp = NodePath("../HealthComponent")

[node name="NavigationComponent" parent="." node_paths=PackedStringArray("hero", "mouse_mostrar") instance=ExtResource("7_r5h44")]
speed = 300
desired_distance = 1.2
hero = NodePath("..")
mouse_mostrar = NodePath("../MouseMostrar")

[node name="EffectsComponent" parent="." node_paths=PackedStringArray("battack_comp", "nav_comp", "health_comp", "sanity_comp", "hero", "show_effect") instance=ExtResource("8_xgmrb")]
battack_comp = NodePath("../BAttackComponent")
nav_comp = NodePath("../NavigationComponent")
health_comp = NodePath("../HealthComponent")
sanity_comp = NodePath("../SanityComponent")
hero = NodePath("..")
show_effect = NodePath("../ShowEffect")

[node name="XPComponent" parent="." node_paths=PackedStringArray("hero") instance=ExtResource("9_3sdxv")]
hero = NodePath("..")

[node name="BAttackComponent" parent="." node_paths=PackedStringArray("nav_comp") instance=ExtResource("9_lc4gq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
atk_damage = 15.0
atk_cooldown = 0.5
range = 5.0
nav_comp = NodePath("../NavigationComponent")

[node name="ControllerComponent" parent="." node_paths=PackedStringArray("nav", "battack", "xp_comp", "hero") instance=ExtResource("10_njmc3")]
nav = NodePath("../NavigationComponent")
battack = NodePath("../BAttackComponent")
xp_comp = NodePath("../XPComponent")
hero = NodePath("..")
control = false
walk_action = "tab"
attack_action = "a"

[node name="ShowEffect" parent="." instance=ExtResource("12_n05nj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25695, 0)

[node name="AbilityPointers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Q" parent="AbilityPointers" instance=ExtResource("10_akldm")]

[node name="W" parent="AbilityPointers" node_paths=PackedStringArray("mesh_instance") instance=ExtResource("10_akldm")]
mesh_instance = NodePath("../Q/MeshInstance3D")

[node name="E" parent="AbilityPointers" node_paths=PackedStringArray("mesh_instance") instance=ExtResource("10_akldm")]
mesh_instance = NodePath("../Q/MeshInstance3D")

[node name="R" parent="AbilityPointers" node_paths=PackedStringArray("mesh_instance") instance=ExtResource("10_akldm")]
mesh_instance = NodePath("../Q/MeshInstance3D")
